update usuario, auth utils

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/mossmax62/desafio-ecommerce-back.git"
   },
-  "author": "Maximiliano Mussuto - Carlos V - ?",
+  "author": "Maximiliano Mussuto",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mossmax62/desafio-ecommerce-back/issues"
