--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "babel-jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "nodemon": "^3.1.4",
-    "standard": "^17.1.0",
-    "standart": "^6.1.0"
+    "standard": "^17.1.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
